Add all improvements: dark mode, OG/SEO, 404, RSS, sitemap, Fuse.js search, post prev/next, Tailwind CLI, real content

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -29,6 +29,18 @@ jobs:
       - name: Build site
         run: go run .
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install Node dependencies
+        run: npm ci
+
+      - name: Compile Tailwind CSS
+        run: npx tailwindcss -i assets/input.css -o docs/tailwind.css --minify
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
